# AI-Speaking-coach

./: .env.example  .gitignore  PROTOCOL.md  README.md  requirements.txt
ai-coding/: speaking-coach.md  分工预览.md  前置条件.md  后序创新扩展.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  event_bus.py  scenes.py  types.py  ws_hub.py
backend/app/modules/auth/: dependencies.py  register.py  router.py  service.py
backend/app/modules/coach/: correction_service.py  pronunciation_service.py  register.py  router.py  shadowing_service.py  store.py  summary_service.py  turn_handler.py
backend/app/modules/conversation/: audio_utils.py  azure_speech.py  llm_client.py  qwen_stt.py  register.py  router.py  scene_router.py  session_manager.py
backend/scripts/: test_qwen_voice_pipeline.py
backend/tests/auth/: __init__.py  test_auth_router.py
backend/tests/coach/: conftest.py  test_correction_service.py  test_pronunciation_service.py  test_router_summary.py  test_shadowing_router.py  test_store.py  test_summary_service.py  test_turn_handler.py
backend/tests/conversation/: test_audio_utils.py  test_azure_speech_adapter.py  test_contract_baseline.py  test_llm_client.py  test_qwen_stt.py  test_realtime_feedback.py  test_session_manager.py  test_session_status_api.py
documents/: PROTOCOL-COACH.md  ai-speaking-coach-dual-dev-spec-20260606.md  dev-a-conversation-runtime-plan-20260606.md  dev-a-requirement-interface-map-20260606.md  dev-b-coach-intelligence-plan-20260606.md  dev-b-requirement-interface-map-20260606.md
frontend/: index.html  (+6 more)
(+25 files in other folders)
